feat: `/get_finished_rides`
